src/yini_test/cases/golden/strict/valid/strings/c-prefix-lowercase.strict.yini
@yini strict

^ Strings
key = c"hello\nworld"

/END
