src/yini_test/cases/golden/strict/invalid/strings/classic-string-invalid-unicode.strict.yini
@yini strict

^ Strings
key = C"\u123"

/END
